--- a/Restopay/Restopay/CartPage.xaml
+++ b/Restopay/Restopay/CartPage.xaml
@@ -8,8 +8,8 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CartPage">
 
-    <Grid>
-        <Label Content="Cart Page" HorizontalAlignment="Left" Margin="355,10,0,0" VerticalAlignment="Top"/>
+    <Grid Background="#FFBDC6DA" Margin="0,0,0,-155">
+        <Label Content="CART" HorizontalAlignment="Left" Margin="377,10,0,0" VerticalAlignment="Top"/>
         <DataGrid x:Name="gridBill"  HorizontalAlignment="Left" Height="268" Margin="186,41,0,0" VerticalAlignment="Top" Width="408" FontSize="14" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" IsReadOnly="True" Width="*"/>
@@ -19,15 +19,22 @@
             </DataGrid.Columns>
 
         </DataGrid>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="186,392,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="Remove all" HorizontalAlignment="Left" Margin="186,340,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <ComboBox HorizontalAlignment="Left" Margin="474,340,0,0" VerticalAlignment="Top" Width="120">
-        <ComboBox.Items>
-            <ComboBoxItem>PayPal</ComboBoxItem>
-            <ComboBoxItem>Credit/Debit Card</ComboBoxItem>
-        </ComboBox.Items>
-         </ComboBox>
-        <Label Content="Payment method :" HorizontalAlignment="Left" Margin="355,337,0,0" VerticalAlignment="Top"/>
-        <Button Content="Pay" HorizontalAlignment="Left" Margin="519,392,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="186,392,0,0" VerticalAlignment="Top" Width="75" Click="ButtonBackClick"/>
+        <Button Content="Remove all" HorizontalAlignment="Left" Margin="186,340,0,0" VerticalAlignment="Top" Width="75" Click="ButtonRemoveClick"/>
+        <ComboBox SelectedIndex="0" Name ="paymentMethod" HorizontalAlignment="Left" Margin="373,426,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBox.Items>
+                <ComboBoxItem>PayPal</ComboBoxItem>
+                <ComboBoxItem>Credit/Debit Card</ComboBoxItem>
+            </ComboBox.Items>
+        </ComboBox>
+        <Label Content="Payment method :" HorizontalAlignment="Left" Margin="264,423,0,0" VerticalAlignment="Top"/>
+        <Button Content="Pay" Name="Pay" HorizontalAlignment="Left" Margin="519,426,0,0" VerticalAlignment="Top" Width="75" Click="Pay_Click"/>
+        <TextBlock x:Name="txAmount" Text ="{Binding Path = subtotal}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontSize="14"/>
+        <TextBlock x:Name="txTax" Text ="{Binding Tax, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,357,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontSize="14"/>
+        <TextBlock x:Name="txTotal" Text ="{Binding Total, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,378,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontWeight="Bold" FontSize="14"/>
+        <Label Content="Subtotal:" HorizontalAlignment="Left" Margin="459,333,0,0" VerticalAlignment="Top"/>
+        <Label Content="Tax:" HorizontalAlignment="Left" Margin="459,353,0,0" VerticalAlignment="Top"/>
+        <Label Content="Total:" HorizontalAlignment="Left" Margin="459,374,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+     
     </Grid>
 </Page>
