--- a/Restopay/Restopay/CartPage.xaml
+++ b/Restopay/Restopay/CartPage.xaml
@@ -10,8 +10,8 @@
 
     <Grid Background="#FFBDC6DA" Margin="0,0,0,-155">
         <Label Content="CART" FontWeight="Bold" FontFamily="Showcard Gothic" FontSize="18" HorizontalAlignment="Left" Margin="359,10,0,0" VerticalAlignment="Top"/>
-        <DataGrid x:Name="gridBill"  HorizontalAlignment="Left" Height="268" Margin="186,41,0,0" VerticalAlignment="Top" Width="408" FontSize="14" AutoGenerateColumns="False">
-            <DataGrid.Columns>
+        <DataGrid Background="#FFBDC6DA" x:Name="gridBill"  HorizontalAlignment="Left" Height="268" Margin="186,41,0,0" VerticalAlignment="Top" Width="408" FontSize="14" AutoGenerateColumns="False">
+            <DataGrid.Columns >
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" IsReadOnly="True" Width="*"/>
                 <DataGridTextColumn Header="Price,CAD" Binding="{Binding Price}" IsReadOnly="True" Width="80"/>
                 <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="70"/>
