--- a/RestopayStaff/RestopayStaff/StaffPage.xaml
+++ b/RestopayStaff/RestopayStaff/StaffPage.xaml
@@ -9,7 +9,7 @@
       Title="StaffPage">
 
     <Grid Background="#FFBDC6DA">
-        <Label Content="Restourant LOGO" HorizontalAlignment="Left" Margin="282,43,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Showcard Gothic" FontSize="24"/>
+        <Label Content="Restaurant LOGO" HorizontalAlignment="Left" Margin="282,43,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Showcard Gothic" FontSize="24"/>
         <Button Content="OWNER" Name ="OWNER" HorizontalAlignment="Left" Margin="69,118,0,0" VerticalAlignment="Top" Width="254" Height="59" FontSize="24" Background="#FF267CB9" FontWeight="Bold" FontFamily="Stencil" Foreground="#FFF2F2F5" RenderTransformOrigin="-0.653,-0.401"/>
         <Button Content="MANAGER" Name ="MANAGER" HorizontalAlignment="Left" Margin="69,227,0,0" VerticalAlignment="Top" Width="254" Height="59" FontSize="24" Background="#FF267CB9" FontWeight="Bold" FontFamily="Stencil" Foreground="#FFF2F2F5" RenderTransformOrigin="-0.653,-0.401"/>
         <Button Content="DB ADMINISTRATOR" Name ="ADMINISTRATOR" HorizontalAlignment="Left" Margin="69,338,0,0" VerticalAlignment="Top" Width="254" Height="59" FontSize="24" Background="#FF267CB9" FontWeight="Bold" FontFamily="Stencil" Foreground="#FFF2F2F5" RenderTransformOrigin="-0.653,-0.401"/>
