--- a/Restopay/Restopay/CartPage.xaml
+++ b/Restopay/Restopay/CartPage.xaml
@@ -16,6 +16,13 @@
                 <DataGridTextColumn Header="Price,CAD" Binding="{Binding Price}" IsReadOnly="True" Width="80"/>
                 <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="70"/>
                 <DataGridTextColumn Header="Subtotal,CAD" Binding="{Binding Amount}" IsReadOnly="True" Width="100"/>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Click="RemoveRaw">X</Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
 
         </DataGrid>
@@ -29,7 +36,7 @@
         </ComboBox>
         <Label Content="Payment method :" HorizontalAlignment="Left" Margin="264,423,0,0" VerticalAlignment="Top"/>
         <Button Content="Pay" Name="Pay" HorizontalAlignment="Left" Margin="519,426,0,0" VerticalAlignment="Top" Width="75" Click="Pay_Click"/>
-        <TextBlock x:Name="txAmount" Text ="{Binding Path = subtotal}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontSize="14"/>
+        <TextBlock x:Name="txAmount" Text ="{Binding Path = subtotal, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,336,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontSize="14"/>
         <TextBlock x:Name="txTax" Text ="{Binding Tax, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,357,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontSize="14"/>
         <TextBlock x:Name="txTotal" Text ="{Binding Total, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" TextAlignment="Right" HorizontalAlignment="Left" Margin="522,378,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Background="#FFA8F07F" FontWeight="Bold" FontSize="14"/>
         <Label Content="Subtotal:" HorizontalAlignment="Left" Margin="459,333,0,0" VerticalAlignment="Top"/>
