--- a/RestopayStaff/RestopayStaff/ManagerPage.xaml
+++ b/RestopayStaff/RestopayStaff/ManagerPage.xaml
@@ -30,9 +30,10 @@
 
         </DataGrid>
 
-        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="147,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14"/>
-        <Button Content="Menu" HorizontalAlignment="Left" Margin="254,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14" />
+        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14" Background="#FFA9DF3C"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="147,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14" Background="#FFF24A36"/>
+        <Button x:Name="ArchidedOrders" Content="Archided Orders" HorizontalAlignment="Left" Margin="363,12,0,0" VerticalAlignment="Top" Width="154" FontSize="14" Click="ArchidedOrders_Click" Background="#FFE87F7F" />
+        <Button Content="Menu" HorizontalAlignment="Left" Margin="254,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14" Background="#FFE6F094" />
         <Label Content="Active orders" HorizontalAlignment="Left" Margin="345,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.692,-0.152" FontWeight="Bold" FontSize="16"/>
     </Grid>
 </Page>
