--- a/RestopayStaff/RestopayStaff/BartenderPage.xaml
+++ b/RestopayStaff/RestopayStaff/BartenderPage.xaml
@@ -30,9 +30,9 @@
 
         </DataGrid>
 
-        <Button Content="Update" HorizontalAlignment="Left" Margin="623,15,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="164,15,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14"/>
-        <Button Content="Menu" HorizontalAlignment="Left" Margin="272,15,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14"/>
+        <Button Content="Update" HorizontalAlignment="Left" Margin="623,15,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14" Background="#FFA9DF3C"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="164,15,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14" Background="#FFF24A36"/>
+        <Button Content="Menu" HorizontalAlignment="Left" Margin="272,15,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14" Background="#FFE6F094"/>
 
     </Grid>
 </Page>
