--- a/RestopayStaff/RestopayStaff/DBAdminPage.xaml
+++ b/RestopayStaff/RestopayStaff/DBAdminPage.xaml
@@ -12,10 +12,10 @@
         <Label Content="DBA PAGE" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontFamily="Showcard Gothic" FontSize="14"/>
         <DataGrid Background="#FFBDC6DA" x:Name="grid"  HorizontalAlignment="Left" Height="345" Margin="0,72,0,0" VerticalAlignment="Top" Width="800" FontSize="16" AutoGenerateColumns="False" >
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding Name}"  Width="460"/>
+                <DataGridTextColumn Header="Name" Binding="{Binding Name}"  Width="*"/>
                 <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="100"/>
 
-                <DataGridTemplateColumn Header="Actions" Width="*">
+                <DataGridTemplateColumn Header="Actions" Width="151">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -31,7 +31,7 @@
 
         </DataGrid>
 
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="16"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="16" Background="#FFF24A36"/>
         <ComboBox x:Name="menuCategory" HorizontalAlignment="Left" Margin="365,42,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0" FontSize="16" >
             <ComboBox.Items>
                 <ComboBoxItem>Beverages</ComboBoxItem>
