--- a/RestopayStaff/RestopayStaff/OrdersArchivePage.xaml
+++ b/RestopayStaff/RestopayStaff/OrdersArchivePage.xaml
@@ -18,21 +18,13 @@
                 <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="70"/>
                 <DataGridTextColumn Header="Table #" Binding="{Binding TableNumber}" IsReadOnly="True" Width="70"/>
                 <DataGridTextColumn Header="Amount" Binding="{Binding Amount}" IsReadOnly="True" Width="100"/>
-                <!--<DataGridTextColumn Header="BartenderStatus" Binding="{Binding BartenderStatus_}" IsReadOnly="True" Width="80"/>
-                <DataGridTemplateColumn Header="Change Status" Width="*">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Click="RemoveRaw">COMPLETE</Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>-->
             </DataGrid.Columns>
 
         </DataGrid>
 
-        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="147,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14"/>
-        <Button Content="Menu" HorizontalAlignment="Left" Margin="254,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14" />
-        <Label Content="Active orders" HorizontalAlignment="Left" Margin="345,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.692,-0.152" FontWeight="Bold" FontSize="16"/>
+        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="ButtonUpdateClick" FontSize="14" Background="#FFA9DF3C"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="217,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonBackClick" FontSize="14" Background="#FFF24A36"/>
+        <Label Content="Orders Archive" HorizontalAlignment="Left" Margin="345,40,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.692,-0.152" FontWeight="Bold" FontSize="16"/>
+        <Button x:Name="ExportToExcel" Content="Export to Excel" HorizontalAlignment="Left" Margin="316,12,0,0" VerticalAlignment="Top" Width="159" Click="ExportToExcel_Click" FontSize="14" Background="#FF0FD4C3"/>
     </Grid>
 </Page>
