--- a/RestopayStaff/RestopayStaff/WaiterPage.xaml
+++ b/RestopayStaff/RestopayStaff/WaiterPage.xaml
@@ -32,9 +32,9 @@
 
         </DataGrid>
 
-        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="158,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14"/>
-        <Button Content="Menu" HorizontalAlignment="Left" Margin="273,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14"/>
+        <Button Content="Update" HorizontalAlignment="Left" Margin="623,12,0,0" VerticalAlignment="Top" Width="167" Click="Button_Click" FontSize="14" Background="#FFA9DF3C"/>
+        <Button Content="Exit" HorizontalAlignment="Left" Margin="158,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonExitClick" FontSize="14" Background="#FFF24A36"/>
+        <Button Content="Menu" HorizontalAlignment="Left" Margin="273,12,0,0" VerticalAlignment="Top" Width="75" Click="ButtonMenuClick" FontSize="14" Background="#FFE6F094"/>
 
     </Grid>
 </Page>
